# unit-conv

./: CMakeLists.txt  conanfile.py  unit_conv.ui
include/: MainWindow.hpp  Operations.hpp  Units.hpp
res/: units.txt
src/: MainWindow.cpp  Units.cpp  main.cpp
tests/: CMakeLists.txt  conversion_test.cpp  file_parse_test.cpp  regex_test.cpp
